--- a/style.css
+++ b/style.css
@@ -5,9 +5,26 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
   }
-  
-  .canvas-class{
-    margin-top: 20px;
-    margin-left: 20px;
+  .btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  input[type=text] {
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    text-transform: capitalize;
+  }
+  #imageInput{
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 
   }
